[tool.poetry]
authors     = ["nada <37610161+furoxr@users.noreply.github.com>"]
description = ""
name        = "nlcps"
version     = "0.1.0"

[tool.poetry.dependencies]
langchain     = "^0.0.273"
pydantic      = "^2.3.0"
python        = "^3.10"
qdrant-client = { version = "^1.4.0", python = ">=3.10,<3.12" }
python-dotenv = "^1.0.0"
openai = "^0.27.9"
tiktoken = "^0.4.0"

[tool.poetry.dev-dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"
mypy = "^1.5.1"

[build-system]
build-backend = "poetry.core.masonry.api"
requires      = ["poetry-core>=1.0.0"]
